# bound-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/: DEPLOYMENT.md
.github/workflows/: ci.yml  deploy.yml  migrate.yml  rollback.yml
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  tts.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  refresh_token.py  tts_dataset.py  tts_model.py  tts_training_job.py  user.py
app/schemas/: __init__.py  auth.py  tts.py
app/services/: audio_processor.py  email.py  job_queue.py  runpod_service.py  s3.py  tts_inference.py
app/templates/email/: verification.html  verification.txt
aws/cloudformation/: ecs.yml  rds.yml  s3.yml  vpc.yml
migrations/: env.py
migrations/versions/: 0a1b2c3d4e5f_add_google_sub_to_users.py  40e2259b7701_convert_ids_to_uuid.py  4f16b994612b_add_users_and_refresh_tokens_tables.py  5005f4425ead_update_timestamps_to_use_server_defaults.py  70be4eb2dab8_change_token_hash_to_text_type.py  9c2c6f2e3b7a_add_email_verification_fields.py  a1b2c3d4e5f6_truncate_all_user_data.py  b2c3d4e5f6a7_add_tts_tables.py  c3d4e5f6a7b8_use_timezone_aware_timestamps.py
runpod/: Dockerfile  Dockerfile.inference  handler.py  inference_handler.py  requirements.txt  train_utils.py
tests/: conftest.py  test_auth.py  test_auth_google.py  test_tts_datasets.py
